# Dry-run

./: .env.example  .gitignore  README.md  pyproject.toml
.githooks/: pre-push
docs/superpowers/plans/: 2026-05-15-phase1-core-loop.md  2026-05-17-phase3-storage-generation-diff.md
docs/superpowers/specs/: 2026-05-15-hexagonal-architecture-design.md  2026-05-15-interview-prep-qa.md  2026-05-17-phase3-4-design.md
dryrun/: __init__.py  config.py
dryrun/adapters/: __init__.py
dryrun/adapters/inbound/: __init__.py
dryrun/adapters/outbound/: __init__.py  llm_factory.py  store_factory.py
dryrun/application/: __init__.py  evaluator.py  generator.py  llm_judge.py  rate_limiter.py  run_suite.py  synthetic_user.py
dryrun/domain/: __init__.py
dryrun/domain/models/: diff.py  evaluation.py  scenario.py  trace.py
dryrun/domain/ports/: __init__.py  agent.py  llm.py  reporter.py  store.py
dryrun/domain/services/: aggregation.py  diff.py  embedding.py  scoring.py
example/: __init__.py  dryrun.yaml
example/agent/: __init__.py  support_agent.py
example/scenarios/: ambiguous_request.yaml  evasive_goal.yaml  expert_user.yaml  frustrated_user.yaml  gives_up.yaml  happy_path.yaml  mid_task_change.yaml  mind_change.yaml  order_status.yaml  refund_request.yaml
tests/: __init__.py  conftest.py
tests/contract/: test_agent_port_contract.py  test_langgraph_adapter_contract.py
tests/integration/: test_cli.py  test_e2e.py  test_evaluation_e2e.py  test_phase3_e2e.py
tests/unit/: test_config.py
tests/unit/adapters/: __init__.py  test_cli_generate.py  test_openai_llm.py  (+3 more)
(+26 files in other folders)
